# Premiere-Pro-Plugin

./: .gitignore  README.md  WAV.epr  add_transition.js  ai_decoder.js  index.html  main.js  manifest.json  style.css  uniquesession_id.js
features/: add_transition.js  curseword_detection.js  trim_silence.js
server/: checkpoints.sqlite-shm  functions.py  main.py  pyproject.toml  test.ipynb  transitionlist.json  var.py
server/tools/: add_transition.py  create_transition_db.py  curseword_detect.py  trim_silence.py
server/transition_db/: chroma.sqlite3
